fix: divide-gap logical properties

--- a/tailwindcss/utilities/divide-gap.css
+++ b/tailwindcss/utilities/divide-gap.css
@@ -1,13 +1,13 @@
 @utility divide-gap-x-* {
-    :where(& > :not(:last-child)) {
-        padding-inline-end: calc(var(--spacing) * --value(integer, [integer]));
-        margin-inline-end: calc(var(--spacing) * --value(integer, [integer]));
-    }
+  :where(& > :not(:last-child)) {
+    padding-inline-end: calc(var(--spacing) * --value(integer, [integer]));
+    margin-inline-end: calc(var(--spacing) * --value(integer, [integer]));
+  }
 }
 
 @utility divide-gap-y-* {
-    :where(& > :not(:last-child)) {
-        padding-bottom: calc(var(--spacing) * --value(integer, [integer]));
-        margin-bottom: calc(var(--spacing) * --value(integer, [integer]));
-    }
+  :where(& > :not(:last-child)) {
+    padding-block-end: calc(var(--spacing) * --value(integer, [integer]));
+    margin-block-end: calc(var(--spacing) * --value(integer, [integer]));
+  }
 }
